--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
+    "jsx": "react-jsx",
+    "types": ["react", "react-dom"],
+
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2022",
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
-
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
