--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd-style": "^3.7.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^7.1.2",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
