--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,19 +5,20 @@
     "esModuleInterop": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2022",
-    "lib": ["dom", "es2015"],
+    "lib": ["esnext", "dom", "dom.iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
-
+    "typeRoots": ["node_modules/@types"],
     /* Linting */
     "strict": false,
-    "typeRoots": ["./node_modules/@types"],
+
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
